@@ -1,5 +1,9 @@
 2013-11-29  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/osdep/linux/ofpath.c: Check return value of read.
+
+2013-11-29  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* util/mkimage.c (grub_install_generate_image): Use grub_crypto_hash for
 	computing crc32 rather than handling with md fundtions directly.
 
